# browser-use-webui

./: .env.example  .gitignore  Dockerfile  README.md  behave.ini  bylilt.py  docker-compose.yml  llms.txt  pyproject.toml  requirements.txt  run.txt  run_tests.py  setup_test_env.py  webui.py
features/: browser_search.feature  environment.py  interaction.feature  navigation.feature  visual.feature
features/steps/: browser_steps.py  interaction_steps.py  navigation_steps.py  visual_steps.py
plugins/: README.md  __init__.py  all_plugin_code.txt  config.yaml  factory.py  plugin_base.py
plugins/mock/: manifest.yaml  mock_plugin.py
plugins/mock2/: __init__.py  manifest.yaml  mock2_plugin.py
plugins/tests/: test_plugin_loader.py
plugins/twitter/: __init__.py  manifest.yaml  twitter_plugin.py
reports/: behave.json
src/agent/: custom_agent.py  custom_massage_manager.py  custom_prompts.py  custom_views.py
src/browser/: config.py  custom_browser.py  custom_context.py
src/controller/: custom_controller.py  views.py
src/utils/: RAG_interaction.py  agent_state.py  default_config_settings.py  interactive_execution.py  llm.py  llm_providers.py  milvus_storage.py  utils.py
test-reports/: behave-report.html
tests/: test_browser_use.py  test_llm_api.py
